content/en/docs/2022.9/Reference/Glossary/k-o.md
---
title: "K-O"
linkTitle: "K-O"
description: "Terms, words and phrases beginning with the letters K through O."
weight: 30
---

# {{% param title %}}

Terms, words and phrases beginning with the letters K through O.

## K

### Kickstarter

Free two/three day workshop that enables the rapid configuration of a cloud-based {{% ctx %}} platform to prototype, and demonstrate automation in context.

See [Kickstarter][].

## L

### Launch Program

A twelve week program which takes your team through the phases of mobilisation, design of automation, trial testing and sign-off to production.

See [Launch Program][].

### Linux

Linux is an open-source Unix-like operating system based on the Linux kernel.

### List

A [data type][] that represents a list of items that can iterated or looped over.

For more detailed information about the List data type, see [Data Types > List&lt;TItem&gt;][].

### Literal

A literal is an explicit value that is not calculated during the execution of the flow. A literal can be any of the following data types:

- [String][]
- [Char][]
- [Int32][]
- [Int64][]
- [Double][]
- [Single][]
- [Boolean][]
- [Object][]
- [Dictionary][]
- [Structure][]
- [List][]

### lowercase

The term lowercase refers to small letters (a,b,c ...) as distinguished from capital letters (A,B,C...).

### Low-code

Low-code is an approach to developing [automation][] through a [graphical user interface (GUI)][GUI] that requires little to no coding; where the [developers][] predominantly use [drag-and-drop][] features, rather than writing [code][].

## M

### Method

In [C#][], a Method is used to execute behaviour of a [data type][] (e.g. the `ToString()` method returns a text representation of the data type).

See [Method Expressions][] for information on how methods can be used within the [expression editor][].

## N

### Non-Null

Non-Null indicates that a [data type][] has been [initialised][] and has a value.

### Nuget Package

A NuGet package is a ZIP file with the .nupkg extension. It contains compiled code ([DLLs][]), other files related to that code.

NuGet can be published and shared to a public or private host.

### Null

Null indicates that a [data type][] has been [initialised][] with no value.

## O

### Object

A [data type][] that indicates that any data type can be used.

For more detailed information about the Object data type, see [Data Types > Object][].

### Occurrence

A value can occur in a [collection][] multiple times, these are called Occurrences.

Occurrences are 1 based (e.g. The first occurrence of an item in a list is at occurrence 1, the second occurrence of an item is at occurrence 2, etc.).

See [Collections > Occurrences][].

### On-premise

On-premise refers to infrastructure and software that is deployed and running within a physical location of an organisation.

### Operand

Describes a [literal][] or [variable][] that has the capability to be operated on. For example, in the [expression][] `1 + 2` the literal values `1` and `2` are operands, whereas `+` is an [operator][].

### Operator

Operators are used to manipulate and check operands values. For example, in the [expression][] `1 + 2` the operator `+` adds the two [operands][operand] `1` and `2`, resulting in the expression evaluating to `3`.

For more detailed information about operators, see [C# operators and expressions][].

### Output

Output properties are used to save values from a [block][blocks]. These properties will saved to a [variable][] during the block’s execution.

See [Block Properties > Output Properties][].

### Out-of-the-box (OOTB)

Out-of-the-box functionality of a product that works immediately after any installation without any configuration or modification.

### Outlook

Outlook is a free web-based email service provided by Microsoft.

[List]: {{< ref "#list" >}}
[literal]: {{< ref "#literal" >}}
[operand]: {{< ref "#operand" >}}
[operator]: {{< ref "#operator" >}}
[Object]: {{< ref "#object" >}}

[expression]: {{< url path="Cortex.Reference.Glossary.A-E.Expression" >}}
[variable]: {{< url path="Cortex.Reference.Glossary.U-Z.Variable" >}}

[automation]: {{< url path="Cortex.Reference.Glossary.A-E.Automation" >}}
[blocks]: {{< url path="Cortex.Reference.Glossary.A-E.Block" >}}
[Boolean]: {{< url path="Cortex.Reference.Glossary.A-E.Boolean" >}}
[Char]: {{< url path="Cortex.Reference.Glossary.A-E.Char" >}}
[code]: {{< url path="Cortex.Reference.Glossary.A-E.Code" >}}
[C#]: {{< url path="Cortex.Reference.Glossary.A-E.CSharp" >}}
[data type]: {{< url path="Cortex.Reference.Glossary.A-E.DataType" >}}
[developers]: {{< url path="Cortex.Reference.Glossary.A-E.Developer" >}}
[DLLs]: {{< url path="Cortex.Reference.Glossary.A-E.DLL" >}}
[drag-and-drop]: {{< url path="Cortex.Reference.Glossary.A-E.DragAndDrop" >}}
[Dictionary]: {{< url path="Cortex.Reference.Glossary.A-E.Dictionary" >}}
[Double]: {{< url path="Cortex.Reference.Glossary.A-E.Double" >}}
[expression editor]: {{< url path="Cortex.Reference.Glossary.A-E.ExpressionEditor" >}}
[GUI]: {{< url path="Cortex.Reference.Glossary.F-J.GUI" >}}
[initialised]: {{< url path="Cortex.Reference.Glossary.F-J.Initialised" >}}
[Int32]: {{< url path="Cortex.Reference.Glossary.F-J.Int32" >}}
[Int64]: {{< url path="Cortex.Reference.Glossary.F-J.Int32" >}}
[Single]: {{< url path="Cortex.Reference.Glossary.P-T.Single" >}}
[String]: {{< url path="Cortex.Reference.Glossary.P-T.String" >}}
[Structure]: {{< url path="Cortex.Reference.Glossary.P-T.Structure" >}}

[Method Expressions]: {{< url path="Cortex.Reference.Concepts.Fundamentals.Blocks.BlockProperties.PropertyEditors.ExpressionEditor.MethodExpressions" >}}
[collection]: {{< url path="Cortex.Reference.Concepts.WorkingWith.Collections.MainDoc" >}}
[Data Types > List&lt;TItem&gt;]: {{< url path="Cortex.Reference.DataTypes.Collections.List.MainDoc" >}}
[Data Types > Object]: {{< url path="Cortex.Reference.DataTypes.All.Object.MainDoc" >}}

[Block Properties > Output Properties]: {{< url path="Cortex.Reference.Concepts.Fundamentals.Blocks.BlockProperties.WhatIsABlockProperty.Output" >}}

[Collections > Occurrences]: {{< url path="Cortex.Reference.Concepts.WorkingWith.Collections.Occurrences.MainDoc" >}}

[C# operators and expressions]: {{< url path="MSDocs.CSharp.OperatorsAndExpressions" >}}

[Kickstarter]: {{< url path="Cortex.Website.EngageWithUs.Kickstarter" >}}
[Launch Program]: {{< url path="Cortex.Website.EngageWithUs.LaunchProgram" >}}
